# OCPQ

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: cli-build.yml  tauri-build-app.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/ocpq_cli/: Cargo.toml
backend/ocpq_cli/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: data_source.rs  lib.rs  trad_event_log.rs
backend/shared/src/binding_box/: expand_step.rs  mod.rs  step_order.rs  structs.rs
backend/shared/src/cel/: mod.rs  resolver.rs
backend/shared/src/data_extraction/: blueprint.rs  mod.rs  tests.rs
backend/shared/src/db_translation/: corpus.rs  id_ocel.rs  mapping.rs  mod.rs  row_context.rs  row_context_id.rs  sql_executor.rs  sql_executor_id.rs
backend/shared/src/discovery/: evaluation.rs  graph_discovery.rs  mod.rs
backend/shared/src/discovery/advanced/: mod.rs
backend/shared/src/hpc_backend/: mod.rs
backend/shared/src/oc_declare/: statistics.rs
backend/shared/src/ocel_graph/: mod.rs
backend/shared/src/path_schemas/: mod.rs
backend/shared/src/preprocessing/: linked_ocel.rs  preprocess.rs
backend/shared/src/table_export/: mod.rs
backend/web-server/: Cargo.toml
backend/web-server/src/: main.rs
backend/web-server/src/load_ocel/: mod.rs
frontend/: .dockerignore  Dockerfile  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  BackendProviderContext.ts  ErrorPage.tsx  InfoSheet.ts  InfoSheetViewer.tsx  globals.css  index.css  main.tsx  router.tsx
frontend/src/components/: AlertHelper.tsx  CELEditor.tsx  ClipboardButton.tsx  DownloadButton.tsx  ElementInfoSheet.tsx  FilterLabelIcon.tsx  JsonEditor.tsx  MenuLink.tsx  OcelElementInfo.tsx  QueryState.tsx  Spinner.tsx  TimeDurationInput.tsx  UpdateButton.tsx
frontend/src/components/backend/: BackendModeDialog.tsx
frontend/src/components/binding-table/: PaginatedBindingTable.tsx  columns.tsx
frontend/src/components/hpc/: HPCConnectionConfigForm.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/ocel/: OcelDropzone.tsx  OcelFilePicker.tsx  OcelSelector.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  button.tsx  card-type-selector.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  input-otp.tsx  input.tsx  intermediate-checkbox.tsx  multi-select.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  textarea.tsx  toggle-group.tsx  toggle.tsx
frontend/src/hooks/: index.ts  useBackend.ts  useEvalResultPage.ts  useLocalStorageState.ts  useOcelAvailable.ts  useOcelElement.ts  useOcelInfo.ts  useOcelSampleIds.ts
frontend/src/hooks/mutations/: useLoadOcel.ts  useUploadOcel.ts
frontend/src/lib/: editor-loader.ts  flow-helper.ts  local-storage.ts  ocel-info-context.tsx  random-colors.ts  variable-hints.ts
frontend/src/routes/: OcelElementViewer.tsx  OcelGraphViewer.tsx
frontend/src/routes/data-extraction/: DataExtractionBlueprintEditor.tsx  DataExtractionRoot.tsx  data-extraction-types.ts
frontend/src/routes/oc-declare/: OCDeclareListPage.tsx  OCDeclareViewer.tsx
frontend/src/routes/ocel-info/: OcelInfoViewer.tsx  OcelTypeViewer.tsx
frontend/src/routes/path-schemas/: DetailsPanel.tsx  DistributionChart.tsx  KindBadge.tsx  PathSchemasViewer.tsx  RadarChart.tsx  SchemaPathDiagram.tsx  StatCard.tsx  TypeFilterPopover.tsx  lib.ts  (+3 more)
frontend/src/types/: DBTranslationInput.ts  hpc-backend.ts  misc.ts  ocel.ts
tauri/: biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: desktop.json  migrated.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: main.rs
(+58 files in other folders)
