[package]
name = "ocpq-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.192" , features = ["derive", "rc"]}
serde_json = "1.0.108"
serde_with = "3.11.0"
ts-rs = { version = "12.0", features = ["serde-compat","chrono-impl"] }
# process_mining = {path = "../../../rust4pm/process_mining", features = ['ocel-sqlite']}
process_mining = { git = "https://github.com/aarkue/rust4pm", branch = "fix/slim-linked-ocel-modifications", features = ["ocel-sqlite"] }
rayon = "1.8.0"
itertools = "0.11.0"
chrono = "0.4.33"
uuid = "1.7.0"
rand = "0.8.5"
cel-interpreter = {version = "0.9.0", features = ["chrono"]}
once_cell = "1.19.0"
dirs-next = "2.0.0"
csv = "1.3.0"
rust_xlsxwriter = {version = "0.80.0", features = ["chrono"]}
ordered-float = {version = "4.4.0", features = ["default","serde"]}
anyhow = "1.0.95"
slurry = { git = "https://github.com/aarkue/slurry", features = ["ssh"], version = "0.1.7"}
tokio = { version = "1.43", features = ["full"] }
rayon-cancel = "1.0.0"
dbcon = { git = "https://github.com/aarkue/dbcon.git" }
regex = "1.10"
