[package]
name = "ocpq-tauri"
version = "0.0.3"
description = "OCPQ"
authors = ["aarkue"]
license = ""
repository = ""
default-run = "ocpq-tauri"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = ["default", "devtools"] }
ocpq-shared = {path = "../../backend/shared"}
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
url = "2.5.2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4.27"
mimalloc = { version = "0.1.47", default-features = false }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
